# ejan-minimum

./: .gitignore  CLAUDE.md  README.md  cors-config.json
.kiro/steering/: product.md  structure.md  tech.md
apps/api/: .coverage  .env.example  Dockerfile  Makefile  mypy.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: prompts.py
apps/api/app/api/routes/: styles.py  tutorials.py
apps/api/app/core/: config.py  storage.py
apps/api/app/models/: __init__.py  request.py  response.py
apps/api/app/services/: __init__.py  ai_client.py  cloud_function_client.py  image_generation.py  storage.py  style_generation.py  tutorial_generation.py  tutorial_structure.py
apps/api/docs/agents/: TUTORIALS.md  TUTORIALS_TASKS.md
apps/api/samples/: check_endpoints.py  image_generation_with_nano_banana.py  image_generation_with_nano_banana_2images.py  normal_gemini.py  video_generation_with_veo3.py
apps/api/scripts/: request.sh  status.sh
apps/api/tests/integration/: test_app_setup.py  test_styles_api.py  test_tutorial_endpoints.py
apps/api/tests/unit/: test_ai_client.py  test_cloud_function_client.py  test_config.py  test_error_handling.py  test_image_generation.py  test_models.py  test_storage_client.py  test_storage_service.py  test_styles_endpoint.py  test_tutorial_structure.py  test_validation.py
apps/web/: .dockerignore  .eslintrc.json  (+6 more)
docs/: 429error.md  MORE.md  PRODUCT.md  setup-gcs-cors.md
terraform/: .gitignore  README.md  cloud_run.tf  functions.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
(+67 files in other folders)
